// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuggestionChoiceCDONameComponent matches snapshot 1`] = `
<div
  className="render-suggestion"
  style={
    Object {
      "position": "relative",
    }
  }
>
  Bob Smith
</div>
`;

exports[`SuggestionChoiceCDONameComponent matches snapshot when isCurrentUser === true 1`] = `
<div
  className="render-suggestion"
  style={
    Object {
      "position": "relative",
    }
  }
>
  Bob Smith (me)
</div>
`;
